[metadata]
name = test-travis-ci
version = 0.1.0.a1
url = https://github.com/hankei6km/test-travis-ci
author = hankei6km
author_email = hankei6km@gmail.com
license = MIT
description = test travis ci
# long_description is set up from README.rst(converted README.md) in setup.py.
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[options]
packages = flying_tent
# install_requires = pyxdg; PyYAML

[bdist_wheel]
universal=1

[aliases]
test=pytest

[flake8]
ignore =
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist

[tool:pytest]
minversion = 3.0
testpaths = tests
addopts = --cov flying_tent
#mock_traceback_monkeypatch = false
#mock_use_standalone_module = true

# [coveragerc:*] to control coverage.py
[coverage:run]
branch = True
# not effective to pytest-cov.
# Specify `addopts` in `[tool:pytest]`,
# if want to pass source path to pytest-cov.
source = flying_tent

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True
